[package]
name = "speedtest-exporter"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
axum = "0.7.6"
env_logger = "0.11"
prometheus = "0.13.4"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
